fixed spacing in header

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -11,6 +11,9 @@
 	
 		margin: 0px auto;
 		padding: 10px;
+		padding-bottom:0;
+		overflow: hidden;
+
 	}
 	.gv-header-blank {
 		height: 60px;
@@ -23,7 +26,7 @@
 }
 
 .gv-page-header {
-	padding: 0 0 20px 0;
+	//padding: 0 0 20px 0;
 	h1 {
 		font-family: $f-serif-headline;
 		font-weight: 200;
